--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "nodebootstraper",
-  "version": "0.0.1",
+  "name": "contentblocks-demo",
+  "version": "0.1.2",
   "dependencies": {
     "express": "3.0.0rc1",
     "jade": "*",
-	"easypost": "*",
-	"cheerio": "*",
 	"contentblocks": "*"
   },
   "engines": {
