--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "contentblocks-demo",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "dependencies": {
-    "express": "3.0.0rc1",
+    "express": "*",
     "jade": "*",
+	"morgan": "*",
+	"body-parser": "*",
+	"method-override": "*",
 	"contentblocks": "*"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.10.30",
+    "npm": "1.4.x"
   }
 }
