Added localhost example.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "contentblocks-demo",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "dependencies": {
     "express": "*",
     "jade": "*",
 	"morgan": "*",
 	"body-parser": "*",
 	"method-override": "*",
-	"contentblocks": "*"
+	"contentblocks": "*",
+    "mongoskin": "*",
+    "easypost": "*"
   },
   "engines": {
-    "node": "0.10.30",
-    "npm": "1.4.x"
+    "node": "*",
+    "npm": "*"
   }
 }
